Finished re-organizing files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
     </section>
 
-
+    <!--Zeni Advirtisement & Link-->
     <section id="current_project">
         <div class="container">
             <div class="row">
@@ -98,11 +98,13 @@
                             </div>
                                  <button type="submit" id="sub" class="btn btn-default">Submit</button>
                         </form>
+                        <!--Will echo result of submit-->
                         <span id="result"></span>
                     </div>
                 </div>
             </div>
         </div>
+        <!--Web Profiles-->
         <div class="container footer">
             <div class="row">
                  <div class="col-sm-12">
@@ -135,6 +137,7 @@
     <script src="./resources/index_resources/form/my_script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+    <!--Get Navigation menu-->
     <script>
     $.get("./resources/index_resources/navigation.html", function(data){
         $("#nav-placeholder").replaceWith(data);
