--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 
                     <p>As part of a commitment to better serve the Rensselaer student body, John serves on the Executive Board – a student-run body that is responsible for overseeing the Student Union’s $4.9 million budget for club and event programming. He also serves on the Rensselaer Union Rules and Elections, and Policies Committees.<p>
                 </div>
-                <a class="btn btn-default" href="resume.html">Resume (HTML)</a>
-                <a class="btn btn-default" href="./index_resources/Resume.pdf">Resume (PDF)</a>
+                <a class="btn btn-default" href="./projects/homeworks/homework1/resume.html">Resume (HTML)</a>
+                <a class="btn btn-default" href="./resources/index_resources/Resume.pdf">Resume (PDF)</a>
             </div>
         </div>
     </section>
@@ -96,7 +96,7 @@
                                 <label style="color:white" for="message">Message:</label>
                                 <textarea class="transparent_field form-control" onblur="onBlur(this)" onfocus="onFocus(this)" rows="5" name="message" id="message"></textarea>
                             </div>
-                                 <button type="submit" id="sub" class="btn btn-default">Submit</button>
+                                 <button type="submit" name="submit" id="sub" class="btn btn-default">Submit</button>
                         </form>
                         <!--Will echo result of submit-->
                         <span id="result"></span>
